--- a/app/assets/styles/components/_nav-menu.scss
+++ b/app/assets/styles/components/_nav-menu.scss
@@ -33,7 +33,7 @@
 }
 
 .menu {
-  position: absolute;
+  position: fixed;
   z-index: 1003;
   outline: none;
   -webkit-tap-highlight-color: transparent;
