--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -23,11 +23,8 @@ footer .footer {
     -ms-transform:translateX(-50%);
     transform:translateX(-50%);
     position:fixed;
-    padding-top: 3rem;
-    bottom: 0rem;
-    height: 63rem;
+    height: 60rem;
     width: 100%;
-    //padding-top: 15rem;
     text-align:center;
     font-size: 1.4rem;
     color: $color-grey-light-1;
@@ -39,14 +36,18 @@ footer .footer {
 
     }
 
+    @include respond(tab-port) {
+        margin-left: 2.6rem;
+
+    }
+
     @include respond(phone) {
-        top: 17.5%;
+        top: 30%;
         margin-left: 3rem;
-        padding-top: 4rem;
     }
 
     @include respond(small-phone) {
-        top: 23%;
+        top: 28%;
         margin-left: 3rem;
     }
     
@@ -143,37 +144,37 @@ canvas {
 
 .we-create-particles {
     position: absolute;
-    top: -57%;
+    top: -55%;
     bottom: 0;
     left: 0;
     right: 0;
     z-index: -1;
-    padding: 0 3rem 3rem 3rem;
+    padding: 0 3rem 0rem 3rem;
     width: 100%;
     height: 100%; 
 
     @include respond(big-desktop) {
-        top: -29%;
+        top: -30.5%;
         left: 0;
     }
 
     @include respond(tab-land) {
-        top: -57.5%;
+        top: -60.5%;
         left: -25.5px;
     }
 
     @include respond(tab-port) {
-        top: -52.5%;
+        top: -55%;
         left: -21.5px;
     }
 
     @include respond(phone) {
-        top: 4.7%;
+        top: -5%;
         left: -25.5px;
     }
 
     @include respond(small-phone) {
-        top: 4.7%;
+        top: -2.1%;
         left: -24.5px;
     }
 
