add fade-in for footer on page load

--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -9,6 +9,7 @@ footer {
     // background-position: 0% 100%;
     // background-repeat: no-repeat;
     // background-size: 100% 80%;
+    opacity: 0;
 
 
 }
@@ -28,6 +29,7 @@ footer .footer {
     text-align:center;
     font-size: 1.4rem;
     color: $color-grey-light-1;
+    
     
     
 
