add particle-js component, responsive layout scss and change projects font to sofiproregular

--- a/app/assets/styles/components/_header-bg.scss
+++ b/app/assets/styles/components/_header-bg.scss
@@ -37,11 +37,21 @@ header .devicons-list-container {
   -webkit-animation: cascade 500s linear infinite;
   animation: cascade 500s linear infinite;
 
+
   @include respond(ipad-port) {
     height: 2000px;
     width: 3000px;
-    -webkit-animation: cascade 500s linear infinite;
-    animation: cascade 500s linear infinite;
+
+  }
+
+  @include respond(phone) {
+    height: 1500px;
+    
+  }
+
+  @include respond(small-phone) {
+    height: 1500px;
+    
   }
 }
 
