--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -116,16 +116,16 @@ h3.cta {
 
 
 .projects {
-  font-family: "Source Sans Pro", sans-serif !important;
+  font-family: "SofiaProRegular", sans-serif;
   text-transform: uppercase;
-  font-size: 1.6rem !important;
-  font-weight: 700 !important;
-  color: rgba($color-tertiary-light, .3) !important;
+  font-size: 1.3rem;
+  font-weight: 100;
+  color: #39414e;
   width: 25%;
   margin: 0 auto;
   height: 6rem;
-  margin-top: -0.56rem;
-  letter-spacing: 1px;
+  margin-top: -0.26rem;
+  letter-spacing: 2px;
   cursor: pointer;
   position: relative;
   z-index: 95;
