--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -13,6 +13,7 @@
 @import "layout/header.scss";
 @import "layout/about.scss";
 @import "layout/footer.scss";
+@import "layout/responsive.scss";
 
 @import "components/loading-animation";
 @import "components/header-bg";
@@ -20,7 +21,7 @@
 @import "components/mixitup-button";
 @import "components/nav-menu";
 @import "components/bg-video";
-//@import "components/svg-scene";
+@import "components/particles-js.scss";
 
 
 
