--- a/app/assets/styles/layout/_grid.scss
+++ b/app/assets/styles/layout/_grid.scss
@@ -89,6 +89,16 @@ div#ps {
   }
 }
 
+//projects button center positioning
+div#projects {
+  display: flex;
+  height: 5vh;
+  top: -4rem;
+	align-items: center;
+	justify-content: center;
+  z-index: -1;
+}
+
 
 
 
