--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -1,19 +1,12 @@
 @import "abstracts/variables";
 @import "abstracts/mixins";
 
-@import "pages/home.scss";
-
-@import "base/animations";
-@import "base/typography";
-@import "base/base";
-
 @import "modules/sprite";
 
 @import "layout/grid.scss";
 @import "layout/header.scss";
 @import "layout/about.scss";
 @import "layout/footer.scss";
-@import "layout/responsive.scss";
 
 @import "components/loading-animation";
 @import "components/header-bg";
@@ -22,6 +15,13 @@
 @import "components/nav-menu";
 @import "components/bg-video";
 @import "components/particles-js.scss";
+
+@import "pages/home.scss";
+
+@import "base/animations";
+@import "base/typography";
+@import "base/base";
+@import "layout/responsive.scss"; //responsive is last to implement media query order for devices
 
 
 
