add -webkit-overflow-scrolling: touch for projects button

--- a/app/assets/styles/components/_mixitup-button.scss
+++ b/app/assets/styles/components/_mixitup-button.scss
@@ -21,7 +21,8 @@
 	letter-spacing: 0.05em;
 	text-align: center;
 	text-decoration: none;
-	text-transform: uppercase;
+  text-transform: uppercase;
+  -webkit-overflow-scrolling: touch;
 }
 
 .btn-liquid .inner {
