--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -14,7 +14,7 @@
 @import "components/mixitup-button";
 @import "components/nav-menu";
 @import "components/bg-video";
-@import "components/particles-js.scss";
+@import "components/particles-footer.scss";
 
 @import "pages/home.scss";
 
