--- a/app/assets/styles/pages/_home.scss
+++ b/app/assets/styles/pages/_home.scss
@@ -18,6 +18,10 @@
     overflow: hidden;
   }
   
+  main {
+    position: relative;
+  }
+
   section {
     position: relative;
     //z-index: 95;
