--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -1,12 +1,11 @@
 @import "abstracts/variables";
 @import "abstracts/mixins";
 
-@import "modules/sprite";
+@import "base/animations";
+@import "base/typography";
+@import "base/base";
 
-@import "layout/grid.scss";
-@import "layout/header.scss";
-@import "layout/about.scss";
-@import "layout/footer.scss";
+@import "modules/sprite";
 
 @import "components/loading-animation";
 @import "components/header-bg";
@@ -14,13 +13,15 @@
 @import "components/mixitup-button";
 @import "components/nav-menu";
 @import "components/bg-video";
-@import "components/particles-footer.scss";
+@import "components/bubbles-bg.scss";
+
+@import "layout/grid.scss";
+@import "layout/header.scss";
+@import "layout/about.scss";
+@import "layout/footer.scss";
 
 @import "pages/home.scss";
 
-@import "base/animations";
-@import "base/typography";
-@import "base/base";
 @import "layout/responsive.scss"; //responsive is last to implement media query order for devices
 
 
